tests/script_runtime_errors/arr_bad_idx2/error.txt
Error: 
    2 | event[idx]
      |       ^^^ Trying to access an index that is out of range 42
